--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,7 +118,7 @@ services:
     
     # Health check
     healthcheck:
-      test: ["/bin/bash", "-c", "pgrep -f 'Runner.Server' || exit 1"]
+      test: ["CMD-SHELL", "pgrep -f 'Runner.Server' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
