Add GITHUB_ORG support to docker-compose.yml
Added GITHUB_ORG environment variable for organization runners.
docker-compose.yml now supports both:
- GITHUB_REPOSITORY (for repo runner)
- GITHUB_ORG (for org runner)

The entrypoint script will validate that one of these is set.

This fixes the issue where .env file had GITHUB_ORG but
docker-compose.yml wasn't passing it to the container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,12 @@ services:
     
     # Environment variables
     environment:
-      # Required
-      GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}
+      # Required - choose one:
+      # For repo runner:
+      GITHUB_REPOSITORY: ${GITHUB_REPOSITORY:-}
+      # For org runner:
+      GITHUB_ORG: ${GITHUB_ORG:-}
+      
       RUNNER_TOKEN: ${RUNNER_TOKEN}
       RUNNER_NAME: ${RUNNER_NAME:-runner-01}
       RUNNER_LABELS: ${RUNNER_LABELS:-podman,linux,amd64}
