Revert entrypoint and fix mapping in docker-compose instead
Better approach: Map RUNNER_TOKEN to GITHUB_TOKEN in docker-compose.yml
instead of adding fallback logic to entrypoint.

This keeps:
- Entrypoint simple and focused
- Variable mapping explicit in docker-compose
- Single source of truth for environment variables

Fixes: [ERROR] GITHUB_TOKEN must be set

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,16 +56,17 @@ services:
       window: 60s
     
     # Environment variables
-    environment:
-      # Required - choose one:
-      # For repo runner:
-      GITHUB_REPOSITORY: ${GITHUB_REPOSITORY:-}
-      # For org runner:
-      GITHUB_ORG: ${GITHUB_ORG:-}
-      
-      RUNNER_TOKEN: ${RUNNER_TOKEN}
-      RUNNER_NAME: ${RUNNER_NAME:-runner-01}
-      RUNNER_LABELS: ${RUNNER_LABELS:-podman,linux,amd64}
+            environment:
+              # Required - choose one:
+              # For repo runner:
+              GITHUB_REPOSITORY: ${GITHUB_REPOSITORY:-}
+              # For org runner:
+              GITHUB_ORG: ${GITHUB_ORG:-}
+              
+              # Map RUNNER_TOKEN from .env to GITHUB_TOKEN expected by entrypoint
+              GITHUB_TOKEN: ${RUNNER_TOKEN}
+              RUNNER_NAME: ${RUNNER_NAME:-runner-01}
+              RUNNER_LABELS: ${RUNNER_LABELS:-podman,linux,amd64}
       
       # Optional
       RUNNER_WORKDIR: ${RUNNER_WORKDIR:-/home/runner/_work}
