Fix: Use GITHUB_TOKEN instead of RUNNER_TOKEN in docker-compose
The env.example already uses GITHUB_TOKEN (correct naming).
docker-compose.yml was using RUNNER_TOKEN (wrong naming).

Now aligned:
- env.example: GITHUB_TOKEN=ghp_xxx
- entrypoint.sh: expects GITHUB_TOKEN
- docker-compose.yml: passes GITHUB_TOKEN

No more confusion about token variable names.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,8 +63,8 @@ services:
               # For org runner:
               GITHUB_ORG: ${GITHUB_ORG:-}
               
-              # Map RUNNER_TOKEN from .env to GITHUB_TOKEN expected by entrypoint
-              GITHUB_TOKEN: ${RUNNER_TOKEN}
+              # GitHub token from .env (matches env.example)
+              GITHUB_TOKEN: ${GITHUB_TOKEN}
               RUNNER_NAME: ${RUNNER_NAME:-runner-01}
               RUNNER_LABELS: ${RUNNER_LABELS:-podman,linux,amd64}
       
