--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,78 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual environments
-venv/
-ENV/
-env/
-.venv
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-
-# Build artifacts
-*.tar.gz
-*.zip
-*.log
-node_modules/
-
-# Credentials (NEVER commit!)
+# Environment and secrets
 .env
 .env.local
-auth.json
-credentials
-secrets
+.env.*.local
 *.key
 *.pem
+*.pub
 
-# Docker
-.dockerignore
-*.tar
+# Sensitive files
+config/.credentials
+config/.runner
+config/.credentials_rsaparams
 
-# Podman
-.podman-*
-
-# Runner configuration
-.runner/
-runner-work/
-runner-config/
-
-# OS
+# Temporary files
+*.tmp
+*.log
+*.pid
+/tmp/
+/var/
 .DS_Store
 Thumbs.db
 
-# CI/CD
-.github/workflows/tmp/
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.atom/
+*.sublime-project
+*.sublime-workspace
+.project
+.classpath
 
-# Local development
-local/
-tmp/
-temp/
+# Build artifacts
+*.pyc
+__pycache__/
+*.egg-info/
+dist/
+build/
+
+# Container/runtime files
+/work/
+/_work/
+/.podman/
+.container*
+
+# Docker/Podman files
+.dockerignore
+docker-compose.override.yml
+podman-compose.override.yml
+
+# Backup files
+*.bak
+*.backup
+backup/
+.backup/
+
+# Cache files
+.cache/
+.pytest_cache/
+.mypy_cache/
+node_modules/
+
+# Lock files (optional, uncomment if needed)
+# Dockerfile.lock
+# package-lock.json
+# yarn.lock
+
+# Local test scripts
+test-*.sh
+scripts/test-*
+
+# CI/CD artifacts
+.github/workflows/test-*
+test-results/
+coverage/
+
