Clarify SELinux fix: Container-only approach is recommended (best practice)
MAJOR DOCUMENTATION IMPROVEMENT:

Clarified that Option 2 (container-only SELinux fix) is BETTER than
Option 1 (system-wide) because:

âœ… Option 2 Benefits:
  - Only disables SELinux for this container
  - Keeps system protection for other services
  - No reboot required
  - Follows principle of least privilege
  - Better security posture

âŒ Option 1 Issues:
  - Disables SELinux for entire system
  - Weakens security for all containers/services
  - Requires reboot
  - Not recommended for production

CHANGES:
- HOST-SELINUX-FIX.md: Reorganized to make container-only fix the primary method
- HOST-SELINUX-FIX.md: Moved system-wide changes to 'Alternative' section
- docker-compose.yml: Added security_opt: label=disable by default
- Added inline documentation with reference to HOST-SELINUX-FIX.md

This ensures new deployments work with SELinux enforcing out-of-the-box!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,12 @@ services:
     container_name: github-runner
     hostname: github-runner
     
+    # SELinux: Disable label checking for this container only
+    # This allows the runner to work with SELinux enforcing on the host
+    # See: doc/HOST-SELINUX-FIX.md for details
+    security_opt:
+      - label=disable
+    
     # Restart policy
     restart: unless-stopped
     restart_policy:
