Fix: Add env_file directive to load .env into container
PROBLEM:
- docker-compose.yml was using \ but not loading .env file
- podman-compose doesn't automatically load .env files like Docker does
- Result: GITHUB_TOKEN was empty in container
- Registration failed with 404 because token was missing

SOLUTION:
- Added 'env_file' directive to services/github-runner
- Points to .env file for environment variable substitution
- Now podman-compose will properly load all env vars from .env

This fixes the 'Token: ' being empty and 404 registration errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,10 @@ services:
     container_name: github-runner
     hostname: github-runner
     
+    # Load environment variables from .env file
+    env_file:
+      - .env
+    
     # SELinux: Disable label checking for this container only
     # This allows the runner to work with SELinux enforcing on the host
     # See: doc/HOST-SELINUX-FIX.md for details
