--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch]
 
 jobs:
   test:
-    runs-on: [self-hosted, linux]
+    runs-on: self-hosted
     steps:
       - name: Hello from runner
         run: |
